<resources>
    <string name="app_name">Event Manager</string>
    <string name="title_activity_home_page">HomePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Profile Settings</string>
    <string name="title_activity_register">Register</string>

    <string name="title_activity_create">CreateActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home_screen">Event Manager</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_sign_in_short">Register</string>
    <string name="uname">User Name</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove your account</string>
    <string name="new_pass">New Password</string>
    <string name="prompt_password">Old Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Click to register!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter your registered Email Id for password reset instructions.</string>
    <string name="activity_name">Profile Settings</string>

</resources>
