<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.apapps.event.ProfileSettings">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            android:gravity="center"
            app:titleTextColor="@color/white"
            android:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView
        android:id="@+id/display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="48dp"
        android:textSize="24sp"/>

        <ImageButton
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_power_settings_new_black_24dp"
            android:layout_below="@id/display_name"
            android:background="@null"
            android:tint="@color/btn_logut_bg"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="48dp"/>


    <ImageButton
        android:id="@+id/sending_pass_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="104dp"
        android:src="@drawable/ic_replay_black_24dp"
        android:layout_toRightOf="@id/sign_out"
        android:layout_below="@id/display_name"
        android:background="@null"
        android:tint="@color/colorPrimaryDark"/>


    <ImageButton
        android:id="@+id/remove_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="64dp"
        android:layout_toRightOf="@id/sending_pass_reset_button"
        android:layout_below="@id/display_name"
        android:background="@null"
        android:src="@drawable/ic_delete_black_24dp"
        android:tint="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/old_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textAlignment="center"
            android:layout_below="@id/sending_pass_reset_button"
            android:layout_marginTop="32dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

    <TextView
        android:id="@+id/reset_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter registered email to reset password."
        android:textAlignment="center"
        android:layout_below="@id/old_email"
        android:layout_marginTop="16dp"
        android:textColor="@color/btn_logut_bg"/>

    <Button
        android:id="@+id/send"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/reset_instructions"
        android:text="@string/btn_send"
        android:textColor="@android:color/white"
        android:layout_centerInParent="true"
        android:textStyle="bold" />

        <Button
            android:id="@+id/remove"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimaryDark"
            android:layout_below="@id/remove_user_button"
            android:layout_alignParentEnd="true"
            android:text="@string/btn_remove"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_alignParentRight="true" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="invisible"
            android:layout_gravity="center|bottom"/>


</RelativeLayout>
